--- a/package.json
+++ b/package.json
@@ -30,14 +30,11 @@
     "mongo-morgan-ext": "github:reedyuk/mongo-morgan-ext",
     "mongodb": "3.1.13",
     "mongoose": "5.4.6",
-    "mongoose-encryption": "^1.5.0",
     "morgan": "^1.8.1",
     "nodemailer": "^4.4.1",
     "pm2": "^2.4.2",
-    "querystring": "^0.2.0",
+    "randomstring": "^1.1.5",
     "response-time": "^2.3.2",
-    "run-sequence": "^1.2.2",
-    "shortid": "^2.2.8",
-    "superagent": "^3.8.0"
+    "run-sequence": "^1.2.2"
   }
 }
